Bug 158830 - FILEOPEN RTF Table header styled texts alignment changed
Summary: FILEOPEN RTF Table header styled texts alignment changed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:24...
Keywords: bibisected, regression
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2023-12-22 11:03 UTC by Gabor Kelemen (Collabora)
Modified: 2024-01-25 13:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimal example file from Word (45.54 KB, application/msword)
2023-12-22 11:03 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issue (94.88 KB, image/png)
2024-01-03 09:06 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-12-22 11:03:39 UTC
Created attachment 191564 [details]
Minimal example file from Word

Attached example file is minimized from attachment 123123 [details] of bug 98321

The table header has Header 4 style with centered text alignment set.
In Writer this becomes left alignment.

1. Open attached file
-> The grey table headers text is left aligned instead of centered. The paragraph below it has also Header 4 set, and alignment is correct there, outside of table.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2eb428a8890dda29fbdc8b639fc1377080fab59f
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

This was good in 7.6, broke with:

https://git.libreoffice.org/core/+/fce18155052821756466ea043c638f4ed72f41d6

author	Oliver Specht <oliver.specht@cib.de>	Thu Nov 02 16:34:50 2023 +0100
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Fri Nov 10 22:29:40 2023 +0100

tdf#158044 handling of paragraph attributes in RTF import
Comment 1 m_a_riosv 2023-12-22 16:23:31 UTC
It is reproducible, saving with Word or with LibreOffice 7.6.4.2
Comment 2 m_a_riosv 2023-12-22 16:24:44 UTC
Also, it looses the center align on the header.
Comment 3 Gabor Kelemen (Collabora) 2024-01-03 09:06:01 UTC
Created attachment 191722 [details]
Screenshot of the issue

Seems like I forgot this
Comment 4 Gabor Kelemen (Collabora) 2024-01-03 09:08:06 UTC
(In reply to m.a.riosv from comment #2)
> Also, it looses the center align on the header.

Yes that's the issue, looks like I messed up the title, sorry.
Comment 5 Commit Notification 2024-01-15 17:10:05 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/70386cd81f8c6e14014cf3cd50ecd6a987c12985

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-01-15 20:40:25 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b65a2bc14c1553846bd0f4910951a0a964b3cde5

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-01-25 13:27:54 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-0":

https://git.libreoffice.org/core/commit/ebee4f6a811ff5e9b0d9d4ae21e349ae3b0cdfdd

tdf#158830 fixes regression introduces with tdf#158044

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.