tdf#158830 fixes regression introduces with tdf#158044

Removing paragraph attributes equal to style attributes now works also
for paragraphs within tables.
This fixes also the regressions documented in tdf#158978 and tdf#158982

Change-Id: I9f430e23fd33cff4d6ec1d1954969666f0080574
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161824
Tested-by: Jenkins
Tested-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Gabor Kelemen <kelemeng@ubuntu.com>
(cherry picked from commit 204d50a07501bf8445a8a0526f68987373834318)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162109
(cherry picked from commit ad172c0fe26212dccfabe11e534ac53b82816ec9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162133
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>